@@ -16,61 +16,73 @@
 
 package de.gematik.test.tiger.common.config;
 
-import lombok.Builder;
-
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
+import lombok.Builder;
+import lombok.EqualsAndHashCode;
 
-/**
- * Stores a map of key/value-pairs.
- */
+/** Stores a map of key/value-pairs. */
+@EqualsAndHashCode(callSuper = true)
 public class BasicTigerConfigurationSource extends AbstractTigerConfigurationSource {
 
-    private final Map<TigerConfigurationKey, String> values;
+  private final Map<TigerConfigurationKey, String> values;
 
-    @Builder
-    public BasicTigerConfigurationSource(SourceType sourceType, TigerConfigurationKey basePath,
-        Map<TigerConfigurationKey, String> values) {
-        super(sourceType, basePath);
-        this.values = values;
-    }
+  @Builder
+  public BasicTigerConfigurationSource(
+      SourceType sourceType,
+      TigerConfigurationKey basePath,
+      Map<TigerConfigurationKey, String> values) {
+    super(sourceType, basePath);
+    this.values = values;
+  }
 
-    public BasicTigerConfigurationSource(SourceType sourceType) {
-        super(sourceType);
-        this.values = new HashMap<>();
-    }
+  public BasicTigerConfigurationSource(SourceType sourceType) {
+    super(sourceType);
+    this.values = new HashMap<>();
+  }
 
-    public Map<TigerConfigurationKey, String> applyTemplatesAndAddValuesToMap(
-        List<TigerTemplateSource> loadedTemplates,
-        Map<TigerConfigurationKey, String> loadedAndSortedProperties) {
-        Map<TigerConfigurationKey, String> finalValues = new HashMap<>();
+  public synchronized Map<TigerConfigurationKey, String> applyTemplatesAndAddValuesToMap(
+      List<TigerTemplateSource> loadedTemplates,
+      Map<TigerConfigurationKey, String> loadedAndSortedProperties) {
+    Map<TigerConfigurationKey, String> finalValues = new HashMap<>();
 
-        finalValues.putAll(loadedAndSortedProperties);
-        finalValues.putAll(values);
+    finalValues.putAll(loadedAndSortedProperties);
+    finalValues.putAll(values);
 
-        final List<TigerConfigurationKey> appliedTemplates = loadedTemplates.stream()
+    final List<TigerConfigurationKey> appliedTemplates =
+        loadedTemplates.stream()
             .map(template -> template.applyToAllApplicable(this, finalValues))
             .flatMap(List::stream)
-            .collect(Collectors.toList());
-        appliedTemplates.forEach(key -> finalValues.remove(key));
+            .toList();
+    appliedTemplates.forEach(finalValues::remove);
 
-        return finalValues;
-    }
+    return finalValues;
+  }
 
-    @Override
-    public Map<TigerConfigurationKey, String> getValues() {
-        return values;
-    }
+  @Override
+  public synchronized Map<TigerConfigurationKey, String> getValues() {
+    return Collections.unmodifiableMap(values);
+  }
 
-    @Override
-    public void putValue(TigerConfigurationKey key, String value) {
-        values.put(key, value);
-    }
+  @Override
+  public synchronized void putValue(TigerConfigurationKey key, String value) {
+    values.put(key, value);
+  }
 
-    @Override
-    public void removeValue(TigerConfigurationKey key) {
-        values.remove(key);
-    }
+  @Override
+  public synchronized void removeValue(TigerConfigurationKey key) {
+    values.remove(key);
+  }
+
+  @Override
+  public synchronized boolean containsKey(TigerConfigurationKey key) {
+    return values.containsKey(key);
+  }
+
+  @Override
+  public synchronized String getValue(TigerConfigurationKey key) {
+    return values.get(key);
+  }
 }
